apps/kube/agones/arpg/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: arpg
    labels:
        app.kubernetes.io/part-of: arpg
        kbve.com/stack: agones
