apps/kube/agones/arpg/manifests/game-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: arpg-game
    namespace: arpg
    labels:
        app: arpg-server
        app.kubernetes.io/part-of: arpg
        kbve.com/category: game-server
        kbve.com/stack: agones
        kbve.com/managed-by: argocd
spec:
    type: ClusterIP
    selector:
        app: arpg-server
    sessionAffinity: ClientIP
    ports:
        - name: ws
          port: 7979
          targetPort: 7979
          protocol: TCP
