apps/kube/agones/arpg/manifests/game-udp-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: arpg-game-udp
    namespace: arpg
    annotations:
        lbipam.cilium.io/ips: '142.132.206.71'
        lbipam.cilium.io/sharing-key: public-71
        lbipam.cilium.io/sharing-cross-namespace: kbve,stalwart
    labels:
        app: arpg-server
        kbve.com/lb-pool: public
        app.kubernetes.io/part-of: arpg
        kbve.com/category: game-server
        kbve.com/stack: agones
        kbve.com/managed-by: argocd
spec:
    type: LoadBalancer
    selector:
        app: arpg-server
    sessionAffinity: ClientIP
    ports:
        - name: udp
          port: 7977
          targetPort: 7977
          protocol: UDP
